--- a/frontend/style.css
+++ b/frontend/style.css
@@ -11,7 +11,6 @@ html, body {
 
 body {
     font-family: 'Lora', serif; 
-    background-color: #fcfcfc; 
     color: #212121; 
     display: flex;
     flex-direction: column; 
@@ -20,6 +19,16 @@ body {
     padding: 0; 
     margin: 0;
     line-height: 1.6;
+}
+
+#backgroundCanvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: #242938;
 }
 
 .screen {
@@ -33,7 +42,7 @@ body {
 }
 
 .hero-section {
-    background-color: #242938; 
+    background-color: transparent; 
     flex-direction: column;
     justify-content: space-between;
     color: #fcfcfc;
